[gd_scene load_steps=4 format=3 uid="uid://be11d55tkybrx"]

[ext_resource type="Theme" uid="uid://b850r5w08k6r5" path="res://resources/VaporwaveTheme.tres" id="1_6tw0m"]
[ext_resource type="Script" uid="uid://cq4whm2kdnwdl" path="res://scripts/ui/pause_menu.gd" id="1_f6eus"]
[ext_resource type="PackedScene" uid="uid://r147iukh4x4i" path="res://scenes/ui/settings_menu.tscn" id="2_0lmf7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6eus")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 0.819608)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12
alignment = 1

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Resume"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Quit"

[node name="SettingsMenu" parent="MarginContainer" instance=ExtResource("2_0lmf7")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
